// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box $margin property renders correctly 1`] = `
.c0 {
  margin: 12px;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box $margin property renders correctly 2`] = `
.c0 {
  margin: 12px;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box $mb property renders correctly 1`] = `
.c0 {
  margin-bottom: 16px;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box $mb property renders correctly 2`] = `
.c0 {
  margin-bottom: 16px;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box $ml property renders correctly 1`] = `
.c0 {
  margin-left: 16px;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box $ml property renders correctly 2`] = `
.c0 {
  margin-left: 16px;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box $mr property renders correctly 1`] = `
.c0 {
  margin-right: 16px;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box $mr property renders correctly 2`] = `
.c0 {
  margin-right: 16px;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box $mt property renders correctly 1`] = `
.c0 {
  margin-top: 16px;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box $mt property renders correctly 2`] = `
.c0 {
  margin-top: 16px;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box $padding property renders correctly 1`] = `
.c0 {
  padding: 12px;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box $padding property renders correctly 2`] = `
.c0 {
  padding: 12px;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box $pb property renders correctly 1`] = `
.c0 {
  padding-bottom: 16px;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box $pb property renders correctly 2`] = `
.c0 {
  padding-bottom: 16px;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box $pl property renders correctly 1`] = `
.c0 {
  padding-left: 16px;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box $pl property renders correctly 2`] = `
.c0 {
  padding-left: 16px;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box $pr property renders correctly 1`] = `
.c0 {
  padding-right: 16px;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box $pr property renders correctly 2`] = `
.c0 {
  padding-right: 16px;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box $pt property renders correctly 1`] = `
.c0 {
  padding-top: 16px;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box $pt property renders correctly 2`] = `
.c0 {
  padding-top: 16px;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box appearance properties $backgroundColor property 1`] = `
.c0 {
  background-color: blue;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box appearance properties $color property 1`] = `
.c0 {
  color: red;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box layout properties $alignItems property renders correctly 1`] = `
.c0 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box layout properties $bottom property renders correctly 1`] = `
.c0 {
  bottom: 30px;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box layout properties $bottom property renders correctly 2`] = `
.c0 {
  bottom: 30px;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box layout properties $columnGap property renders correctly 1`] = `
.c0 {
  -webkit-column-gap: 3px;
  column-gap: 3px;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box layout properties $columnGap property renders correctly 2`] = `
.c0 {
  -webkit-column-gap: 3px;
  column-gap: 3px;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box layout properties $display property renders correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box layout properties $flex property renders correctly 1`] = `
.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box layout properties $flex property renders correctly 2`] = `
.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box layout properties $flexDirection property renders correctly 1`] = `
.c0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box layout properties $flexGrow property renders correctly 1`] = `
.c0 {
  -webkit-box-flex: grow;
  -webkit-flex-grow: grow;
  -ms-flex-positive: grow;
  flex-grow: grow;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box layout properties $flexShrink property renders correctly 1`] = `
.c0 {
  -webkit-flex-shrink: none;
  -ms-flex-negative: none;
  flex-shrink: none;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box layout properties $flexWrap property renders correctly 1`] = `
.c0 {
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box layout properties $gap property renders correctly 1`] = `
.c0 {
  gap: 8px;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box layout properties $gap property renders correctly 2`] = `
.c0 {
  gap: 8px;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box layout properties $gridTemplateColumns property renders correctly 1`] = `
.c0 {
  grid-template-columns: 1fr 1fr;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box layout properties $gridTemplateRows property renders correctly 1`] = `
.c0 {
  grid-template-rows: 1fr 1fr 1fr;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box layout properties $height property renders correctly 1`] = `
.c0 {
  height: 100px;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box layout properties $height property renders correctly 2`] = `
.c0 {
  height: 100px;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box layout properties $justifyContent property renders correctly 1`] = `
.c0 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box layout properties $left property renders correctly 1`] = `
.c0 {
  left: 40px;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box layout properties $left property renders correctly 2`] = `
.c0 {
  left: 40px;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box layout properties $maxHeight property renders correctly 1`] = `
.c0 {
  max-height: 100px;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box layout properties $maxHeight property renders correctly 2`] = `
.c0 {
  max-height: 100px;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box layout properties $maxWidth property renders correctly 1`] = `
.c0 {
  max-width: 100px;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box layout properties $maxWidth property renders correctly 2`] = `
.c0 {
  max-width: 100px;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box layout properties $minHeight property renders correctly 1`] = `
.c0 {
  min-height: 100px;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box layout properties $minHeight property renders correctly 2`] = `
.c0 {
  min-height: 100px;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box layout properties $minWidth property renders correctly 1`] = `
.c0 {
  min-width: 100px;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box layout properties $minWidth property renders correctly 2`] = `
.c0 {
  min-width: 100px;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box layout properties $opacity property renders correctly 1`] = `
.c0 {
  opacity: 0;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box layout properties $opacity property renders correctly 2`] = `
.c0 {
  opacity: 0;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box layout properties $position property renders correctly 1`] = `
.c0 {
  position: relative;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box layout properties $right property renders correctly 1`] = `
.c0 {
  right: 20px;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box layout properties $right property renders correctly 2`] = `
.c0 {
  right: 20px;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box layout properties $rowGap property renders correctly 1`] = `
.c0 {
  row-gap: 2px;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box layout properties $rowGap property renders correctly 2`] = `
.c0 {
  row-gap: 2px;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box layout properties $top property renders correctly 1`] = `
.c0 {
  top: 10px;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box layout properties $top property renders correctly 2`] = `
.c0 {
  top: 10px;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box layout properties $width property renders correctly 1`] = `
.c0 {
  width: 100px;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box layout properties $width property renders correctly 2`] = `
.c0 {
  width: 100px;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box layout properties $zIndex property renders correctly 1`] = `
.c0 {
  z-index: 99;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box layout properties $zIndex property renders correctly 2`] = `
.c0 {
  z-index: 99;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box responsive object renders correctly 1`] = `
@media (max-width:1280px) {
  .c0 {
    color: blue;
  }
}

@media (max-width:1024px) {
  .c0 {
    color: red;
  }
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box when "undefined" value in $alignItems property skips it correctly 1`] = `
<div
  className=""
>
  Children
</div>
`;

exports[`Box when "undefined" value in $flexDirection property skips it correctly 1`] = `
.c0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  className="c0"
>
  Children
</div>
`;

exports[`Box when "undefined" value in $margin property skips it correctly 1`] = `
<div
  className=""
>
  Children
</div>
`;

exports[`Box when "undefined" value in $padding property skips it correctly 1`] = `
<div
  className=""
>
  Children
</div>
`;

exports[`Box when "undefined" value in $pl property skips it correctly 1`] = `
<div
  className=""
>
  Children
</div>
`;

exports[`Box with "as" property renders correctly 1`] = `
<span
  className=""
>
  Children
</span>
`;
